--- a/WowLatinos/wwwroot/css/site.css
+++ b/WowLatinos/wwwroot/css/site.css
@@ -1,37 +1,13 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿.panel-nav-rounded{
+
+    border-radius: 25px;
+    border: 2px solid gray;
+ 
+
 }
 
-/* Wrapping element */
-/* Set some basic padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
-}
+.color-panel , div.color-panel div.divider i.fa.fa-user,div.color-panel div.divider i.fa.fa-info-circle,div.color-panel div.divider i.fa.fa-gamepad,div.color-panel div.divider i.fa.fa-users,div.color-panel div.divider i.fa.fa-trophy,div.color-panel div.divider i.fa.fa-handshake-o,div.color-panel div.divider i.fa.fa-copy{
 
-/* Set widths on the form inputs since otherwise they're 100% wide */
-input,
-select,
-textarea {
-    max-width: 280px;
-}
+ background-color:lightslategray;
 
-/* Carousel */
-.carousel-caption p {
-    font-size: 20px;
-    line-height: 1.4;
-}
-
-/* Make .svg files in the carousel display properly in older browsers */
-.carousel-inner .item img[src$=".svg"] {
-    width: 100%;
-}
-
-/* Hide/rearrange for smaller screens */
-@media screen and (max-width: 767px) {
-    /* Hide captions */
-    .carousel-caption {
-        display: none;
-    }
 }
