--- a/WowLatinos/Views/Home/Index.cshtml
+++ b/WowLatinos/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 
 
     <!-- REVOLUTION SLIDER -->
-    <div class="fullscreenbanner-container" style="margin-top:-35px;">
+    <div class="fullscreenbanner-container sl-top">
         <div class="fullscreenbanner ken-burns">
             <ul>
 
